Fix interacting users alignment in the fact bubble

--- a/core/app/assets/stylesheets/bubble/tabs.css.less
+++ b/core/app/assets/stylesheets/bubble/tabs.css.less
@@ -28,7 +28,7 @@
   margin-bottom: 8px;
   list-style: none;
 
-  width: 600px;
+  width: 595px;
 
   li {
     float: left;
